@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.videomediaset" name="Mediaset Play Infinity" provider-name="phate89, aracnoz" version="2.0.7">
+<addon id="plugin.video.videomediaset" name="Mediaset Infinity" provider-name="phate89, aracnoz" version="2.1.0">
     <requires>
         <import addon="xbmc.python" version="2.25.0" />
-        <import addon="script.module.phate89" version="1.2.1"/>
+        <import addon="script.module.phate89" version="1.2.2"/>
         <import addon="script.module.inputstreamhelper" version="0.0.1"/>
     </requires>
     <extension library="default.py" point="xbmc.python.pluginsource">
@@ -19,8 +19,11 @@
         <forum>https://forum.kodi.tv/showthread.php?tid=292876</forum>
         <source>https://github.com/phate89/plugin.video.videomediaset</source>
         <reuselanguageinvoker>true</reuselanguageinvoker>
-        <news>2.0.7
-- fix mistake in code refactoring
+        <news>2.1.0
+- fixed movie category listing
+- fixed mediaset branding name
+- updated lib helper to fix nexus 20 problems (thx nixxo and CristianSumma)
+- fixed random videos erroring out (thx madpilot78)
         </news>
         <assets>
             <icon>resources/icon.png</icon>
